--- a/frontend/src/components/signup/signup.css
+++ b/frontend/src/components/signup/signup.css
@@ -6,10 +6,10 @@
   align-items: center;
 }
 .signupForm {
-  height: 70vh;
+  height: 72vh;
   width: 25%;
-  border-radius: 10%;
-  padding: 5rem;
+  border-radius: 30px;
+  padding: 3rem;
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
   display: flex;
   justify-content: center;
@@ -22,11 +22,15 @@
   background-color: none;
   background-color: white;
   border: none;
-  border-radius: 10%;
+  border-radius: 10px;
   padding: 0.5rem 1rem 0.5rem 1rem;
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
 .signupButton:hover {
-  background-color: #0059b3;
+  background-color: black;
   color: white;
+}
+.warnings{
+  position: absolute;
+  margin-bottom: 26rem;
 }
