--- a/frontend/src/components/signup/signup.css
+++ b/frontend/src/components/signup/signup.css
@@ -20,17 +20,60 @@
 .signupButton {
   margin-top: 1rem;
   background-color: none;
-  background-color: white;
+  background-color: black;
+  color: white;
+  width: 12rem;
   border: none;
   border-radius: 10px;
   padding: 0.5rem 1rem 0.5rem 1rem;
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
 .signupButton:hover {
-  background-color: black;
-  color: white;
+  background-color: white;
+  color: black;
 }
 .warnings{
   position: absolute;
   margin-bottom: 26rem;
+}
+@media (max-width: 600px){
+  .signupForm{
+    width: 80%;
+  }
+  .signupButton{
+    margin-top: 2rem;
+    width: 200px;
+    font-size: 18px;
+  }
+  .warnings{
+    margin-bottom: 30rem;
+  }
+}
+@media only screen and (min-width: 601px){
+  .signupForm{
+    height: 60vh;
+    width: 45%;
+  }
+  .signupButton{
+    margin-top: 2rem;
+    width: 200px;
+    font-size: 18px;
+  }
+  .warnings{
+    margin-bottom: 30rem;
+  }
+}
+@media only screen and (min-width: 1024px){
+  .signupForm{
+    height: 70vh;
+    width: 20%;
+  }
+  .signupButton{
+    margin-top: 2rem;
+    width: 200px;
+    font-size: 18px;
+  }
+  .warnings{
+    margin-bottom: 30rem;
+  }
 }
