--- a/frontend/src/components/navbar/navbar.css
+++ b/frontend/src/components/navbar/navbar.css
@@ -140,11 +140,11 @@ nav li:first-child{
         display: none;
     }
     .signInNavigation{
-        width: 7rem;
+        width: auto;
         color: white;
         background-color: black;
         border: none;
-        font-size: 20px;
+        font-size: 18px;
         font-weight: 400;
         border-bottom: 2px solid black;
         padding: 0.5rem 1rem 0.5rem 1rem;
@@ -155,7 +155,7 @@ nav li:first-child{
         background-color: black;
         border: none;
         border: 2px solid white;
-        font-size: 20px;
+        font-size: 18px;
         font-weight: 400;
         border-radius: 5px;
         padding: 0.5rem 1rem 0.5rem 1rem;
