--- a/frontend/src/components/signin/signin.css
+++ b/frontend/src/components/signin/signin.css
@@ -27,13 +27,7 @@
   padding: 0.5rem 1rem 0.5rem 1rem;
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
-.signinButton:hover {
-  background-color: black;
-  color: white;
-}
-.signinWarning{
-  position: absolute;
-}
+
 @media (max-width: 600px){
   .signinForm{
     height: 50vh;
@@ -46,37 +40,30 @@
     margin-top: 1rem;
     font-size: 18px;
   }
-  .signinWarning{
-    margin-bottom: 20rem;
-  }
+  
 }
 @media only screen and (min-width: 601px){
   .signinForm{
     height: 50%;
-    width: 40%;
+    width: auto;
+    padding: 5rem;
   }
   .siginLabel{
     font-size: 28px
   }
   .signupButton{
     font-size: 18px;
-  }
-  .signinWarning{
-    margin-bottom: 20rem;
   }
 }
-@media only screen and (min-width: 1024px){
+@media only screen and (min-width: 1020px){
   .signinForm{
-    height: 70vh;
-    width: 25%;
+    height: 60vh;
+    width: auto;
   }
   .siginLabel{
     font-size: 28px
   }
   .signupButton{
     font-size: 18px;
-  }
-  .signinWarning{
-    margin-bottom: 20rem;
   }
 }
