--- a/frontend/src/components/home/home.css
+++ b/frontend/src/components/home/home.css
@@ -1,22 +1,122 @@
 .home{
     height: 90vh;
     width: 100%;
+}
+.welcomingBox{
+    height: 90vh;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
+.mainLineTickets{
+    display: flex;
+    justify-content: space-between;
+    height: 2rem;
+    width: 100%;
+    margin-bottom: 1rem;
+}
+.threeDots{
+    background-color: white;
+    border: none;
+    cursor: pointer;
+}
+.ticketActions{
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    padding-top: 2rem;
+}
+.openTask{
+    padding: 0.4rem 1.5rem 0.3rem 1.5rem;
+    border:none;
+    background-color: rgb(76, 187, 23);
+    color: white;
+    border-radius: 5px;
+    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+}
+.closeTask{
+    padding: 0.4rem 1.5rem 0.3rem 1.5rem;
+    border:none;
+    background-color: rgb(183, 18, 18);
+    color: white;
+    border-radius: 5px;
+    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+}
 @media (max-width: 600px){
+    .ticketsList{
+        height: auto;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 5rem;
+        margin-top: 5rem;
+        overflow-y: scroll;
+    }
+    .ticketBox{
+        height: 40vh;
+        width: 80%;
+        border: 2px solid black;
+        border-radius: 30px;
+        display: flex;
+        flex-direction: column;
+        padding: 2rem;
+
+    }
     .welcomingText{
         font-size: 44px;
     }
 }
 @media only screen and (min-width: 601px){
+    .ticketsList{
+        height: auto;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 5rem;
+        margin-top: 5rem;
+        overflow-y: scroll;
+    }
+    .ticketBox{
+        height: 40vh;
+        width: 80%;
+        border: 2px solid black;
+        border-radius: 30px;
+        display: flex;
+        flex-direction: column;
+        padding: 2rem;
+        gap: 1rem;
+    }
     .welcomingText{
         font-size: 64px;
     }
 }
 @media only screen and (min-width: 1024px){
+    .ticketsList{
+        height: auto;
+        width: 90%;
+        margin: 5rem;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 5rem;
+        overflow-y: scroll;
+    }
+    .ticketBox{
+        height: 50vh;
+        width: 35%;
+        border: 2px solid black;
+        border-radius: 30px;
+        display: flex;
+        flex-direction: column;
+        padding: 2rem;
+        gap: 0.5rem;
+    }
     .welcomingText{
         font-size: 64px;
     }
