--- a/frontend/src/components/home/home.css
+++ b/frontend/src/components/home/home.css
@@ -9,7 +9,13 @@
     justify-content: center;
     align-items: center;
 }
-
+.homeCircle{
+    height: 90vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .mainLineTickets{
     display: flex;
     justify-content: space-between;
@@ -29,17 +35,18 @@
     padding-top: 2rem;
 }
 .openTask{
-    padding: 0.4rem 1.5rem 0.3rem 1.5rem;
+    padding: 0.5rem 1.5rem 0.3rem 1.5rem;
     border:none;
-    background-color: rgb(76, 187, 23);
-    color: white;
+    background-color: white;
+    color: black;
+    border: 2px solid black;
     border-radius: 5px;
     box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
 }
 .closeTask{
-    padding: 0.4rem 1.5rem 0.3rem 1.5rem;
+    padding: 0.5rem 1.5rem 0.3rem 1.5rem;
     border:none;
-    background-color: rgb(183, 18, 18);
+    background-color: black;
     color: white;
     border-radius: 5px;
     box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
@@ -116,6 +123,13 @@
         flex-direction: column;
         padding: 2rem;
         gap: 0.5rem;
+    }
+    .editButton{
+        position: absolute;
+        width: 30%;
+        margin-left: 15%;
+        margin-top: 1%;
+        display: flex;
     }
     .welcomingText{
         font-size: 64px;
