--- a/frontend/src/components/home/home.css
+++ b/frontend/src/components/home/home.css
@@ -51,6 +51,13 @@
     border-radius: 5px;
     box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
 }
+.subject{
+    height: auto;
+    width: 100%;
+    white-space: nowrap;         
+    overflow: hidden;            
+    text-overflow: ellipsis;   
+}
 @media (max-width: 600px){
     .ticketsList{
         height: auto;
@@ -59,12 +66,12 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        gap: 5rem;
+        gap: 3rem;
         margin-top: 5rem;
         overflow-y: scroll;
     }
     .ticketBox{
-        height: 40vh;
+        height: 35vh;
         width: 80%;
         border: 2px solid black;
         border-radius: 30px;
@@ -85,7 +92,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        gap: 5rem;
+        gap: 3rem;
         margin-top: 5rem;
         overflow-y: scroll;
     }
