--- a/frontend/src/components/home/home.css
+++ b/frontend/src/components/home/home.css
@@ -10,3 +10,8 @@
     align-items: center;
     flex-direction: column;
 }
+.loggedButtons{
+    margin-top: 1rem;
+    display: flex;
+    gap: 2rem;
+}
