--- a/frontend/src/components/home/home.css
+++ b/frontend/src/components/home/home.css
@@ -15,3 +15,9 @@
     display: flex;
     gap: 2rem;
 }
+@media only screen and (max-width: 601px){
+    .loggedButtons{
+        flex-direction: column;
+        gap: 1;
+    }
+}
